pomerium/proxy-deployment.yaml
# Source: pomerium/templates/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pomerium-proxy
    helm.sh/chart: pomerium-4.2.6
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: pomerium
    app.kubernetes.io/component: proxy
  name: pomerium-proxy
spec:
  replicas: 1
  selector:
    matchLabels:  
      app.kubernetes.io/name: pomerium-proxy
      app.kubernetes.io/instance: pomerium
  template:
    metadata:
      annotations:
        checksum/config: 52133ddfcd583280388a8bbfb67a417b6b660f75bc63ec1b01beec811d4498ef
        checksum/secret: 2d4c159cbbd1b10a8177c789e26b7513998f7466d1e4eb960f1a6195b776ec1d
      labels:
        app.kubernetes.io/name: pomerium-proxy
        helm.sh/chart: pomerium-4.2.6
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: pomerium
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:v0.5.2
        imagePullPolicy: IfNotPresent
        args:
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 9090
            name: metrics
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        resources:
          {}
        volumeMounts:
        - mountPath: /pomerium/cert.pem
          name: service-tls
          subPath: tls.crt
        - mountPath: /pomerium/privkey.pem
          name: service-tls
          subPath: tls.key
        - mountPath: /pomerium/ca.pem
          name: ca-tls
          subPath: ca.crt
      volumes:
      - name: service-tls
        secret:
          secretName: pomerium-proxy-tls
      - name: ca-tls
        secret:
          secretName: pomerium-ca-tls
---
