pomerium/authenticate-service.yaml
# Source: pomerium/templates/authenticate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pomerium-authenticate
  labels:
    app.kubernetes.io/name: pomerium-authenticate
    helm.sh/chart: pomerium-4.2.6
    app.kubernetes.io/instance: pomerium
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authenticate
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: pomerium-authenticate
    app.kubernetes.io/instance: pomerium
---
